# scraperApp

./: .gitignore  README.md  pyproject.toml  run_scraper.py
core/: browser.py  downloader.py
database/: DB.py  db_connection.py
extractors/: base_extractor.py  factory.py  kilbel.py  kilbel.yaml  utils.py
jobs/: base_job_getter.py  jobs_getter.py  product_jobs.py
pipelines/: base_pipeline.py  supabase_pipeline.py
repositories/: base_repository.py  price_history_repository.py  products_repository.py
